Created TDResult as separate Pod

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,7 +2,8 @@ use_frameworks!
 
 target 'TDWebService_Example' do
   pod 'TDWebService', :path => '../'
-
+  pod 'TDResult'
+  
   target 'TDWebService_Tests' do
     inherit! :search_paths
 
